# passmanager

./: ChangeLog  Makefile  Makefile.am  Makefile.in  NOTICE  README  README.md  TODO  config.h  config.h.in  config.h.in~  config.status  configure  configure.ac  configure.ac.save  configure.scan  passmanager  passmanager.c  passmanager.html  passmanager_update_to_2.3  passmanager_update_to_2.3.c  passwords-2.3  passwords-2.3.autobak  testfile  testfile.autobak  todo
.deps/: passmanager.Po
YAXA-cryptanalysis/: CRYPTANALYSIS  KEYSTREAM_STATS  PERIOD_TESTING  TOOLS  dihardtest.sh  freqan.c  keystreamextractor.sh  keystreamtesting.sh  makedummydatabase.sh  mkpasswd.c  mockfilegenerator.sh  periodsearch.c  pxorc.c  stripsalt.c  yaxafileutil.c  yaxaiterationproof.c
autom4te.cache/: output.0  output.1  output.2  requests  traces.0  traces.1  traces.2
doc/: non-working-ciphers  working-ciphers
examples/: examplepasswords1.dat.autobak
man/: passmanager.1
scripts/: ciphercheck.sh  ciphertextforgery.sh  ciphertextmodification.sh  demofunctions.sh  examplepasswords1.dat.autobak  examplepasswords1.dat.forged  gentype  makefakepassfile.sh
src/: addentry.c  allocatebuffers.c  backupdatabase.c  checkmem.c  cleanupbuffers.c  configevp.c  deleteentry.c  derivekeys.c  disableptrace.c  evpdecrypt.c  evpencrypt.c  genevpsalt.c  genpassword.c  getpass.c  globals.c  globals.h  headers.h  lockmemory.c  macros.h  main.c  misc.c  opendatabase.c  parseoptions.c  passmanager  passmanager.c  printclipboardmessage.c  printdbinfo.c  printentry.c  printmacerrmessage.c  printsyntax.c  prototypes.h  sendpasswithxlib.c  sendwithclipboard.c  signciphertext.c  structs.h  updatedbenc.c  updateentry.c  verifyciphertext.c  writedatabase.c  xclip.c
src/.deps/: passmanager.Po
