bin_PROGRAMS = passmanager

passmanager_SOURCES = src/passmanager.c

bin_SCRIPTS = scripts/ciphercheck.sh

man_MANS = man/passmanager.1

docdir = $(datadir)/doc/@PACKAGE@
doc_DATA = doc/non-working-ciphers doc/working-ciphers

exampledir = $(datarootdir)/doc/@PACKAGE@
example_DATA = examples/examplepasswords1.dat
